<resources>
    <string name="app_name">Workrise</string>
    <!-- Text Resources -->
    <string name="common_hint_tap_action">タップして入力</string>
    <string name="form_setting_title_default_todo">やること</string>
    <string name="form_setting_title_default_memo">その他、メモ</string>

    <string-array name="top_titles">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="top_pager_title">%d日(%s)</string>
    <string-array name="top_pager_weeks">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>

    <string name="top_btn_back_day">今日に戻る</string>
    <string name="top_menu_setting">設定</string>


    <string name="report_btn_edit">日記の編集</string>
    <string name="report_btn_create">日記の作成</string>
    <string name="report_btn_share">シェア</string>

    <string name="form_btn_save">保存する</string>

    <string name="report_setting_title">項目設定</string>
    <string name="report_setting_btn_add">追加する</string>
    <string name="report_setting_menu_submit">完了</string>

    <string name="form_setting_dialog_btn_create">作成する</string>
    <string name="form_setting_dialog_btn_edit">編集する</string>
    <string name="form_setting_dialog_btn_cancel">キャンセル</string>
    <string name="form_setting_type_checklist">チェックリスト</string>
    <string name="form_setting_type_text">テキスト</string>
    <string name="form_setting_menu_edit">編集</string>
    <string name="form_setting_menu_delete">削除</string>
</resources>
